--- a/dentko/about.html
+++ b/dentko/about.html
@@ -130,7 +130,9 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <button class="uk-button uk-button-default button">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
+                            <div class="about__btn-wrap">
+                                <button class="uk-button uk-button-default button about__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            </div>
                         </div>
                         <div class="about__side">
                             <div class="about__img-wrap about__img-wrap_another">
