--- a/dentko/faq.html
+++ b/dentko/faq.html
@@ -248,11 +248,11 @@
                     <div class="reviews__pagination">
                         <ul class="uk-pagination" uk-margin>
                             <li><a href="#"><span class="reviews__control reviews__control_disabled reviews__control-prev"></span></a></li>
-                            <li class="uk-active"><span>1</span></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
+                            <li class="reviews__page uk-active"><span>1</span></li>
+                            <li class="reviews__page"><a href="#">2</a></li>
+                            <li class="reviews__page"><a href="#">3</a></li>
+                            <li class="reviews__page"><a href="#">4</a></li>
+                            <li class="reviews__page"><a href="#">5</a></li>
                             <li><a href="#"><span class="reviews__control reviews__control-next"></span></a></li>
                         </ul>
                     </div>
