--- a/dentko/payment.html
+++ b/dentko/payment.html
@@ -138,7 +138,9 @@
                                 <li>А в самых запущенных случаях придется оплатить имплант, его установку и изготовление коронки для него.</li>
                             </ul>
                             <p class="uk-text-normal">Чем быстрее вы обращаетесь к врачу, тем меньше приходится платить. А с учетом того, что лечение зубов в рассрочку в Минске не подразумевает начисления процентной ставки – это очень выгодное решение. При этом сумму можно разделить на 6 равных частей и выплатить в течение полугода. Если размер ежемесячного платежа для вас слишком велик, можно воспользоваться программой банковского кредитования и распределить сумму на более длительный срок.</p>
-                            <button class="uk-button uk-button-default button">Записаться на прием<img src="./img/inline-arrow-w.svg"></button>
+                            <div class="about__btn-wrap">
+                                <button class="uk-button uk-button-default button about__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            </div>
                         </div>
                     </div>
                 </div>
