--- a/dentko/price.html
+++ b/dentko/price.html
@@ -333,7 +333,9 @@
                                 <li><span class="uk-text-bold">Материалы.</span> Мы используем композиты европейского производства, которые не подвержены окрашиванию и длительно сохраняют эстетику, прочны и хорошо крепятся к природному дентину.</li>
                             </ul>
                             <p class="uk-text-normal">Цены платной стоматологии в Минске всегда обоснованы. Ведь в них включено то, что гарантирует вам высокое качество лечения и эстетичную реставрацию зубов.</p>
-                            <button class="uk-button uk-button-default button">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            <div class="about__btn-wrap">
+                                <button class="uk-button uk-button-default button about__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            </div>
                         </div>
                     </div>
                 </div>
