--- a/dentko/service.html
+++ b/dentko/service.html
@@ -180,7 +180,9 @@
                                 <li>Уговорим даже самого капризного малыша. Поход к стоматологу в нашей клинике превращается в увлекательный квест, где ребенок сам вовлекается во вселенскую борьбу за здоровье зубов;</li>
                                 <li>Найдем способы лечения даже в сложных ситуациях. В отличие от государственных клиник, мы не направляем пациентов с периодонтитом на удаление – мы лечим болезнь и сохраняем зуб для последующего протезирования;</li>
                             </ul>
-                            <button class="uk-button uk-button-default button">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            <div class="about__btn-wrap">
+                                <button class="uk-button uk-button-default button about__btn popup-request-open">Записаться на прием <img src="./img/inline-arrow-w.svg"></button>
+                            </div>
                         </div>
                         <div class="about__side">
                             <div class="about__img-wrap">
@@ -256,7 +258,7 @@
                 <div class="doctors__bg_gray"></div>
             </div>
             <div class="uk-container">
-                <h2 class="uk-h2">Врачи этого направления</h2>
+                <h2 class="uk-h2">Наши врачи</h2>
                 <div class="uk-slider-container" uk-slider="finite: true">
                     <ul class="uk-slider-items uk-child-width-1-1 doctors__slider">
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
@@ -275,7 +277,7 @@
                                     <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                     <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                 </div>
-                                <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                             </div>
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
@@ -292,7 +294,7 @@
                                     <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                     <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                 </div>
-                                <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                             </div>
                         </li>
                         <li class="uk-position-relative uk-flex uk-flex-bottom uk-child-width-1-2 doctor">
@@ -309,7 +311,7 @@
                                     <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                     <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                 </div>
-                                <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                             </div>
                         </li>
                     </ul>
@@ -347,7 +349,7 @@
                                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                             </div>
-                                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -374,7 +376,7 @@
                                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                             </div>
-                                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -401,7 +403,7 @@
                                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                             </div>
-                                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -428,7 +430,7 @@
                                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                             </div>
-                                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -455,7 +457,7 @@
                                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                                             </div>
-                                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                                         </div>
                                     </div>
                                 </div>
@@ -475,7 +477,7 @@
                                 <a href="#" class="slider-button slider-prev" uk-slider-item="previous"></a>
                                 <a href="#" class="slider-button slider-next" uk-slider-item="next"></a>
                             </div>
-                            <span class="slider__pagination">1/<span class="slider__pagination-total">8</span></span>
+                            <span class="slider__pagination"><span class="slider__pagination-active">1</span>/<span class="slider__pagination-total">8</span></span>
                         </div>
                     </div>
                     <ul class="uk-slider-items uk-child-width-1-3@s uk-child-width-1-4@m uk-grid">
