--- a/dentko/faq.html
+++ b/dentko/faq.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="faqs__wrap">
                     <div class="uk-width-1-1 uk-flex uk-flex-between uk-flex-stretch faqs__themes">
-                        <div class="uk-card uk-card-body uk-flex uk-flex-column uk-flex-between uk-flex-middle faqs__theme">
+                        <div class="uk-card uk-card-body uk-flex uk-flex-column uk-flex-between uk-flex-middle faqs__theme active">
                             <svg width="32" height="33" viewBox="0 0 32 29" class="faqs__theme-img" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M25.421 5.53613H4.26882C4.01142 5.53613 3.80273 5.76568 3.80273 6.04883C3.80273 6.33197 4.01142 6.56152 4.26882 6.56152H25.4211C25.6785 6.56152 25.8872 6.33197 25.8872 6.04883C25.8872 5.76568 25.6784 5.53613 25.421 5.53613Z"/>
                                 <path d="M25.8871 10.6343C25.8871 10.3511 25.6784 10.1216 25.421 10.1216H4.26882C4.01142 10.1216 3.80273 10.3511 3.80273 10.6343C3.80273 10.9174 4.01142 11.147 4.26882 11.147H25.4211C25.6784 11.147 25.8871 10.9174 25.8871 10.6343Z"/>
