--- a/dentko/index.html
+++ b/dentko/index.html
@@ -107,61 +107,65 @@
     </nav>
     <div class="mobile-menu"></div>
     <main class="main">
-        <section class="slider" uk-slider="finite: true">
-            <div class="uk-slider-container">
-                <ul class="uk-slider-items uk-child-width-1-1">
-                    <li>
-                        <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
-                            <div class="uk-container uk-height-large uk-position-relative">
-                                <div class="uk-position-center-left slider__body">
-                                    <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
-                                    <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
-                                    <div class="slider__controls">
-                                        <div class="slider__buttons">
-                                            <a href="#" class="slider-prev" uk-slider-item="previous"></a>
-                                            <a href="#" class="slider-next" uk-slider-item="next"></a>
-                                        </div>
-                                        <div class="slider__pagination"><span></span></div>
+        <section class="banner__swiper">
+            <div class="swiper-wrapper uk-child-width-1-1">
+                <div class="swiper-slide">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                        <div class="uk-container uk-height-large uk-position-relative">
+                            <div class="uk-position-center-left slider__body">
+                                <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
+                                <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
+                                <div class="swiper__controls">
+                                    <div class="slider__buttons">
+                                        <a href="#" class="slider-prev"></a>
+                                        <a href="#" class="slider-next"></a>
+                                    </div>
+                                    <div class="swiper__pagination">
+                                        <div class="swiper-pagination"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </li>
-                    <li>
-                        <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
-                            <div class="uk-container uk-height-large uk-position-relative">
-                                <div class="uk-position-center-left slider__body">
-                                    <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
-                                    <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
-                                    <div class="slider__controls">
-                                        <div class="slider__buttons">
-                                            <a href="#" class="slider-prev" uk-slider-item="previous"></a>
-                                            <a href="#" class="slider-next" uk-slider-item="next"></a>
-                                        </div>
-                                        <div class="slider__pagination"><span></span></div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                        <div class="uk-container uk-height-large uk-position-relative">
+                            <div class="uk-position-center-left slider__body">
+                                <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
+                                <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
+                                <div class="swiper__controls">
+                                    <div class="slider__buttons">
+                                        <a href="#" class="slider-prev"></a>
+                                        <a href="#" class="slider-next"></a>
+                                    </div>
+                                    <div class="swiper__pagination">
+                                        <div class="swiper-pagination"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </li>
-                    <li>
-                        <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
-                            <div class="uk-container uk-height-large uk-position-relative">
-                                <div class="uk-position-center-left slider__body">
-                                    <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
-                                    <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
-                                    <div class="slider__controls">
-                                        <div class="slider__buttons">
-                                            <a href="#" class="slider-prev" uk-slider-item="previous"></a>
-                                            <a href="#" class="slider-next" uk-slider-item="next"></a>
-                                        </div>
-                                        <div class="slider__pagination"><span></span></div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                        <div class="uk-container uk-height-large uk-position-relative">
+                            <div class="uk-position-center-left slider__body">
+                                <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
+                                <h2 class="uk-text-large">Стоматология достигла высочайшего уровня в эстетической коррекции и протезировании</h2>
+                                <div class="swiper__controls">
+                                    <div class="slider__buttons">
+                                        <a href="#" class="slider-prev"></a>
+                                        <a href="#" class="slider-next"></a>
+                                    </div>
+                                    <div class="swiper__pagination">
+                                        <div class="swiper-pagination"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="benefits">
