--- a/dentko/service.html
+++ b/dentko/service.html
@@ -163,7 +163,24 @@
                             <span class="form__err">Введите номер в международном формате</span>
                         </div>
                         <button class="uk-input" type="submit">Записаться на прием</button>
-                        <a href="#" class="form__schedule"><span>Посмотреть режим работы</span><img src="./img/info-w.svg"></a>
+                        <div class="uk-position-relative form__dropdown-wrap">
+                            <span class="form__schedule">Посмотреть режим работы  <img src="./img/info-w.svg"></span>
+                            <div class="uk-position-absolute uk-card uk-card-body uk-margin-remove-top form__dropdown-card">
+                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <div class="footer__card-body uk-flex uk-flex-between">
+                                    <div class="footer__card-col uk-flex uk-flex-column">
+                                        <span>пн-пт:</span>
+                                        <span>сб:</span>
+                                        <span>вс:</span>
+                                    </div>
+                                    <div class="footer__card-col uk-flex uk-flex-column">
+                                        <span>09:00 — 21:00</span>
+                                        <span>09:00 — 20:00</span>
+                                        <span>09:00 — 17:00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -227,7 +244,24 @@
                             <span class="form__err">Введите номер в международном формате</span>
                         </div>
                         <button class="uk-input" type="submit">Записаться на прием</button>
-                        <a href="#" class="form__schedule"><span>Посмотреть режим работы</span><img src="./img/info-w.svg"></a>
+                        <div class="uk-position-relative form__dropdown-wrap">
+                            <span class="form__schedule">Посмотреть режим работы  <img src="./img/info-w.svg"></span>
+                            <div class="uk-position-absolute uk-card uk-card-body uk-margin-remove-top form__dropdown-card">
+                                <h3 class="footer__card-header uk-text-bold">Время работы:</h3>
+                                <div class="footer__card-body uk-flex uk-flex-between">
+                                    <div class="footer__card-col uk-flex uk-flex-column">
+                                        <span>пн-пт:</span>
+                                        <span>сб:</span>
+                                        <span>вс:</span>
+                                    </div>
+                                    <div class="footer__card-col uk-flex uk-flex-column">
+                                        <span>09:00 — 21:00</span>
+                                        <span>09:00 — 20:00</span>
+                                        <span>09:00 — 17:00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="uk-flex uk-flex-between uk-flex-middle uk-child-width-1-2@l action__wrap">
