--- a/dentko/index.html
+++ b/dentko/index.html
@@ -80,7 +80,7 @@
         <div class="uk-navbar-center">
             <ul class="uk-navbar-nav uk-flex-between uk-flex-middle">
                 <li><a href="./about.html">о компании</a></li>
-                <li class="nav__dropdown">
+                <li>
                     <a href="./service.html">услуги</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
@@ -97,9 +97,9 @@
                 </li>
                 <li><a href="./price.html">цены</a></li>
                 <li><a href="./payment.html">оплата и рассрочка</a></li>
-                <li><a href="./reviews.html">отзывы</a></li>
+                <li><a href="./reviews/reviews.html">отзывы</a></li>
                 <li><a href="./team.html">специалисты</a></li>
-                <li><a href="./faq.html">вопрос-ответ</a></li>
+                <li><a href="./faq/faq.html">вопрос-ответ</a></li>
                 <li><a href="./contacts.html">контакты</a></li>
                 <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
             </ul>
@@ -110,7 +110,7 @@
         <section class="banner__swiper">
             <div class="swiper-wrapper uk-child-width-1-1">
                 <div class="swiper-slide">
-                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.jpg);">
                         <div class="uk-container uk-height-large uk-position-relative">
                             <div class="uk-position-center-left slider__body">
                                 <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.jpg);">
                         <div class="uk-container uk-height-large uk-position-relative">
                             <div class="uk-position-center-left slider__body">
                                 <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.png);">
+                    <div class="uk-background-cover uk-height-large uk-panel" style="background-image: url(./img/microscope.jpg);">
                         <div class="uk-container uk-height-large uk-position-relative">
                             <div class="uk-position-center-left slider__body">
                                 <h1 class="uk-h1">Наша цель - красота и здоровье Ваших зубов</h1>
@@ -241,15 +241,6 @@
                                 <p class="uk-text-normal">Искренняя и открытая улыбка – оружие массового поражения. Она привлекает к вам внимание противоположного пола, располагает к общению клиентов и помогает расти по карьерной лестнице. Но улыбаться открыто может лишь тот, кто уверен в безупречности своих зубов и свежести дыхания. Стоматологический центр «Дентко» в Минске оказывает полный комплекс услуг по сохранению красивой улыбки в любом возрасте:</p>
                                 <ul class="uk-list">
                                     <li>Мы лечим молочные и постоянные зубки у детей, обучаем их правильному уходу за полостью рта и корректируем прикус;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
-                                    <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
                                     <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
                                     <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
                                     <li>Оказываем полный комплекс терапевтических услуг – лечение кариеса, пульпита и периодонтита;</li>
