--- a/dentko/team.html
+++ b/dentko/team.html
@@ -95,9 +95,9 @@
                 </li>
                 <li><a href="./price.html">цены</a></li>
                 <li><a href="./payment.html">оплата и рассрочка</a></li>
-                <li><a href="./reviews.html">отзывы</a></li>
+                <li><a href="./reviews/reviews.html">отзывы</a></li>
                 <li><a href="./team.html">специалисты</a></li>
-                <li><a href="./faq.html">вопрос-ответ</a></li>
+                <li><a href="./faq/faq.html">вопрос-ответ</a></li>
                 <li><a href="./contacts.html">контакты</a></li>
                 <li><a class="nav__order popup-request-open" href="#">Записаться на прием <img src="./img/inline-arrow.svg"></a></li>
             </ul>
@@ -109,7 +109,7 @@
             <div class="uk-container">
                 <h1 class="uk-h1">Наши специалисты</h1>
                 <div class="team__wrapper">
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team1.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team2.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -157,7 +157,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team3.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team4.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team5.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -229,7 +229,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team6.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -253,7 +253,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team7.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team8.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -301,7 +301,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team9.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
@@ -325,7 +325,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="member">
+                    <a href="./doctor.html" class="member">
                         <div class="uk-card member__card uk-flex">
                             <img src="./img/team10.png" class="member__img">
                             <div class="uk-card-body uk-flex uk-flex-between uk-flex-column member__body">
