--- a/dom/index.html
+++ b/dom/index.html
@@ -523,7 +523,7 @@
                             <div class="faq__answer text_light">Все представленные в этом каталоге проекты обладают уютной план</div>
                         </div>
                         <div class="faq">
-                            <a href="#" class="faq__link text_ttu text_bold text_dark">Какие гарантие мы получаем?</a>
+                            <a href="#" class="faq__link text_ttu text_bold text_dark">Какие гарантии мы получаем?</a>
                             <div class="faq__answer text_light">Все представленные в этом каталоге проекты обладают уютной план</div>
                         </div>
                         <div class="faq">
